# factstr

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  PROJECT_BRIEF.md  README.md  mkdocs.yml
.github/workflows/: docs.yml  publish-node.yml  release-rust.yml
docs/: core-concepts.md  examples.md  getting-started.md  index.md  live-subscriptions.md  node-typescript.md  reference.md  sqlite.md  stores.md  streams.md
examples/account-projection/: Cargo.toml
examples/account-projection/src/: main.rs
examples/bank-slices-cli/: Cargo.toml  README.md
examples/bank-slices-cli/src/: cli.rs  main.rs
examples/bank-slices-cli/src/features/: deposit.rs  fetch_balance.rs  fetch_movement_history.rs  mod.rs  open_account.rs  transfer.rs  withdraw.rs
examples/basic-memory/: Cargo.toml
examples/basic-memory/src/: main.rs
examples/live-subscriptions/: Cargo.toml
examples/live-subscriptions/src/: main.rs
factstore/: Cargo.toml
factstore-conformance/: Cargo.toml
factstore-conformance/src/: lib.rs
factstore-memory/: Cargo.toml
factstore-memory/src/: memory_store.rs  subscription_registry.rs
factstore-memory/tests/: subscriptions.rs
factstore-postgres/: Cargo.toml
factstore-postgres/src/: lib.rs  payload_match.rs  postgres_store.rs  query_match.rs  subscription_registry.rs
factstore-postgres/tests/: subscriptions.rs  tokio_runtime.rs
factstore-postgres/tests/support/: mod.rs
factstore/src/: event_store.rs  live_subscription.rs
factstr/: Cargo.toml
factstr-conformance/: Cargo.toml
factstr-conformance/src/: lib.rs  query.rs
factstr-interop/: Cargo.toml
factstr-interop/src/: interop_event_record.rs
factstr-interop/tests/: conversions.rs
factstr-memory/: Cargo.toml
factstr-memory/src/: memory_store.rs
factstr-memory/tests/: query.rs
factstr-node/: Cargo.toml  NPM.md  README.md  index.d.ts  package.json
factstr-node/npm/darwin-arm64/: package.json
factstr-node/npm/darwin-x64/: package.json
factstr-node/npm/linux-x64-gnu/: package.json
factstr-node/npm/win32-x64-msvc/: package.json
factstr-node/scripts/: prepare-readme.mjs
factstr-node/smoke/: index.ts
factstr-node/src/: append_if_outcome.rs  factstr_memory_store.rs  lib.rs  node_request.rs  node_result.rs
factstr-node/tests/: memory_store.rs
factstr-postgres/: Cargo.toml
factstr-postgres/src/: postgres_store.rs
factstr-postgres/tests/: query.rs
factstr-sqlite/: Cargo.toml
factstr-sqlite/src/: sqlite_store.rs
factstr-sqlite/tests/: query.rs
factstr/src/: event_record.rs
scripts/: check-node-version-sync.mjs
