[package]
name = "factstore-conformance"
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.85"
description = "Reusable semantic conformance tests for factstore store implementations."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ricofritzsche/factstore.git"
homepage = "https://factstore.ricofritzsche.me"
readme = "../README.md"

[lib]
path = "src/lib.rs"

[dependencies]
factstore = { version = "0.1.0", path = "../factstore" }
serde_json = "1"
