[package]
name = "factstr-conformance"
version = "0.2.1"
edition = "2024"
publish = false
rust-version = "1.85"
description = "Reusable semantic conformance tests for factstr store implementations."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ricofritzsche/factstr.git"
homepage = "https://factstr.com"
readme = "../README.md"

[lib]
path = "src/lib.rs"

[dependencies]
factstr = { version = "0.2.1", path = "../factstr" }
serde_json = "1"
