[package]
name = "factstr-interop"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
publish = false
description = "Explicit interop DTO boundary for factstr append, query, and conditional-append semantics."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ricofritzsche/factstr.git"
homepage = "https://factstr.com"
readme = "../README.md"
keywords = ["eventstore", "interop", "facts", "query", "append"]
categories = ["api-bindings"]

[lib]
path = "src/lib.rs"

[dependencies]
factstr = { version = "0.2.1", path = "../factstr" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
