[package]
name = "factstr"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
description = "Shared runtime contract for factstr, a fact-based Rust event store with query-defined consistency."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ricofritzsche/factstr.git"
homepage = "https://factstr.com"
readme = "../README.md"
keywords = ["eventstore", "eventsourcing", "facts", "consistency", "cqrs"]
categories = ["database-implementations"]

[lib]
path = "src/lib.rs"

[dependencies]
serde_json = "1"
time = "0.3"
